--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,8 +25,8 @@ android {
         applicationId "com.carrot.trucoder2"
         minSdkVersion 23
         targetSdkVersion 30
-        versionCode 1
-        versionName "1.0"
+        versionCode 5
+        versionName "1.5"
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -79,10 +79,17 @@ dependencies {
     //circular image view
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //firebase
-    implementation 'com.google.firebase:firebase-auth:19.3.2'
+    implementation 'com.google.firebase:firebase-auth:19.4.0'
     implementation 'com.google.android.gms:play-services-auth:18.1.0'
     //lottie
     implementation 'com.airbnb.android:lottie:3.4.1'
     //dataStore
     implementation "androidx.datastore:datastore-preferences:1.0.0-alpha01"
+    //review
+    implementation 'com.google.android.play:core:1.8.0'
+    implementation 'com.google.android.play:core-ktx:1.8.1'
+    //fab
+    implementation 'uk.co.markormesher:android-fab:2.5.0'
+    //spin kit
+    implementation 'com.github.ybq:Android-SpinKit:1.4.0'
 }
